2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Make better Unicode-compliant and unify some UTF-8 code pathes.

	* grub-core/normal/charset.c (grub_utf8_to_utf16): Don't eat possibly
	valid character.
	(grub_is_valid_utf8): Use grub_utf8_process.
	Check resulting code range.
	(grub_utf8_to_ucs4): Use grub_utf8_process.
	* include/grub/charset.h (grub_utf16_to_utf8): Don't eat up a possibly
	valid character.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/io/bufio.c (grub_bufio_read): Fix handling of corner cases.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Filesystems): Mention AFS.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Filesystems): Clarify restrictions.
	(Regexp): Mention non-Unicode regexp behaviour.
	(Other): Mention non-Unicode matching behaviour.

2011-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Make HFS implementation use MacRoman.

	* grub-core/fs/hfs.c (MAX_UTF8_PER_MAC_ROMAN): New define.
	(macroman): New const array.
	(macroman_to_utf8): New function.
	(utf8_to_macroman): Likewise.
	(grub_hfs_find_dir): Use utf8_to_macroman.
	(grub_hfs_dir): Use macroman_to_utf8.
	Set case_insensitive.

2011-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Filesystems): Add IEEE1275 full-path example.

2011-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Integrate hints into autogeneration scripts.

	* docs/grub.texi (Filesystems): Add a hostdisk example.
	* Makefile.util.def (grub-mkdevicemap): Remove ofpath.
	(grub-probe): Add ofpath.
	* gentpl.py: Remove group nosparc64.
	* grub-core/commands/search.c (cache_entry): New struct.
	(cache): New var.
	(FUNC_NAME): Use and save cache. Fix handling of trailing comma.
	* grub-core/commands/search_wrap.c (options): Add platform-specific
	hint options.
	(grub_cmd_search): Handle platform-specific hints.
	(GRUB_MOD_INIT): Declare grub_cmd_search as accept_dash.