@@ -1,5 +1,12 @@
 2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* include/grub/unicode.h (grub_unicode_compact_range): Replace end with
+	len and make it smaller. All users updated.
+	* util/import_unicode.py: Put length and not end character.
+	Check length.
+
+2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Make better Unicode-compliant and unify some UTF-8 code pathes.
 
 	* grub-core/normal/charset.c (grub_utf8_to_utf16): Don't eat possibly
